Fix Ingredients in description alignment

--- a/src/app/components/info-receta/info-receta.component.scss
+++ b/src/app/components/info-receta/info-receta.component.scss
@@ -20,10 +20,51 @@ section{
   background-color: styles.$light-background-country;
   border-radius: 1rem;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 h2 {
   font-size: 1.5rem;
+}
+
+.section-ingredientes
+{
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+
+.section-ingredientes ul {
+  width: 70%;
+  margin: 0;
+  padding: 0;
+}
+
+.section-ingredientes li {
+  margin: 1rem 0
+}
+
+.ingrediente
+{
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+}
+
+.ingredient-quantity{
+  // font-size: 1.2rem;
+  margin-left: 1rem;
+  font-weight: 700;
+}
+
+.ingredient-opcional{
+  font-size: 0.8rem;
+  font-style: italic;
+  margin-left: 1rem;
+  text-decoration: underline;
 }
 
 
@@ -86,4 +127,15 @@ h2 {
 
 .volver-button:focus {
   outline: none;
+  }
+
+  @media screen and (max-width: 950px) {
+    .ingrediente
+    {
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 3rem 0;
+    }
   }
